# ready-set-boole

./: README.md
ready-set-boole/: Cargo.toml
ready-set-boole/src/: lib.rs  libadder.rlib  main.rs
ready-set-boole/src/ex00/: adder.rs  main.rs  mod.rs  test.rs
ready-set-boole/src/ex01/: main.rs  multiplier.rs  test.rs
ready-set-boole/src/ex02/: gray_code.rs  main.rs  test.rs
ready-set-boole/src/ex03/: eval_formula.rs  main.rs  test.rs
ready-set-boole/src/ex04/: main.rs  test.rs  truth_table.rs
ready-set-boole/src/ex05/: main.rs  nnf.rs  test.rs
ready-set-boole/src/ex06/: cnf.rs  main.rs  test.rs
ready-set-boole/src/ex07/: main.rs  sat.rs  test.rs
ready-set-boole/src/ex08/: main.rs  powerset.rs  test.rs
ready-set-boole/src/ex09/: main.rs  set_evaluation.rs  test.rs
ready-set-boole/src/ex10/: curve.rs  main.rs  test.rs
ready-set-boole/src/ex11/: inverse_function.rs  main.rs  test.rs
ready-set-boole/src/extra/: formula.rs
